2012-08-14  Alexey Proskuryakov  <ap@apple.com>

        [WK2] Fix some typos in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=94047

        Reviewed by Jon Honeycutt.

        * MiniBrowser/mac/AppDelegate.m:
        (didReceiveMessageFromInjectedBundle): (-[BrowserAppDelegate init]):
        * MiniBrowser/mac/WebBundle/WebBundleMain.m:
        (didReceiveMessage):
        (WKBundleInitialize):

2012-08-14  Roger Fong  <roger_fong@apple.com>

        old-run-webkit-tests should skip all file extensions for ref tests, not just .html.
        https://bugs.webkit.org/show_bug.cgi?id=93904

        Reviewed by Tim Horton.

        old-run-webkit-tests ref test only skipped .html test.
        They need to skip .html, .shtml, .xml, .xhtml, .pl, .htm, .php, .svg, .mht.
        
        * Scripts/old-run-webkit-tests:
        (isUsedInReftest): Skip all extensions for ref tests.

2012-08-14  Lauro Neto  <lauro.neto@openbossa.org>

        Convert signals/slots to Q_* macros.

        [Qt] Use Q_SLOTS and Q_SIGNALS instead of slots and signals
        https://bugs.webkit.org/show_bug.cgi?id=93996

        Reviewed by Kenneth Rohde Christiansen.

        Change usage of keyword-conflicting 'signals' and 'slots' for
        Q_SIGNALS and Q_SLOTS macro.

        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        (NetworkAccessManager):
        (WebPage):
        * DumpRenderTree/qt/EventSenderQt.h:
        (EventSender):
        * DumpRenderTree/qt/GCControllerQt.h:
        (GCController):
        * DumpRenderTree/qt/TestRunnerQt.h:
        (TestRunner):
        * DumpRenderTree/qt/TextInputControllerQt.h:
        (TextInputController):
        * MiniBrowser/qt/BrowserWindow.h:
        (BrowserWindow):
        * MiniBrowser/qt/MiniBrowserApplication.h:
        (WindowOptions):
        * MiniBrowser/qt/UrlLoader.h:
        (UrlLoader):
        * QtTestBrowser/cookiejar.h:
        (TestBrowserCookieJar):
        * QtTestBrowser/fpstimer.h:
        (FpsTimer):